# student-grade-management-system

./: .gitignore  CMakeLists.txt  readme.md
data/: students.txt
include/: Student.h  StudentManager.h  Utilities.h
report/: report.txt
src/: Student.cpp  StudentManager.cpp  Utilities.cpp  main.cpp
